<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AttendanceActivity"
    tools:layout_editor_absoluteY="81dp">


    <EditText
        android:id="@+id/name"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:drawableLeft="@drawable/ic_action_name"
        android:ems="10"
        android:hint="@string/a_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Class"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:drawableLeft="@drawable/ic_action_class"
        android:ems="10"
        android:hint="@string/a_Class"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/sub"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:drawableLeft="@drawable/ic_action_subject"
        android:ems="10"
        android:hint="@string/a_Subject"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Class" />

    <Button
        android:id="@+id/markBtn"
        android:layout_width="176dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:background="@color/m_BtnColor"
        android:text="@string/a_markBtn"
        android:textColor="@color/m_TxtColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sub" />

    <Button
        android:id="@+id/viewBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/m_BtnColor"
        android:text="@string/a_View"
        android:textColor="@color/m_TxtColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/markBtn" />
</android.support.constraint.ConstraintLayout>