<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateActivity"
    tools:layout_editor_absoluteY="81dp">

    <EditText
        android:id="@+id/id"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:drawableLeft="@drawable/ic_action_id"
        android:ems="10"
        android:hint="@string/u_id"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/name"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:drawableLeft="@drawable/ic_action_name"
        android:ems="10"
        android:hint="@string/u_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id" />

    <EditText
        android:id="@+id/Class"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:drawableLeft="@drawable/ic_action_class"
        android:ems="10"
        android:hint="@string/u_Class"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/sub"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:drawableLeft="@drawable/ic_action_subject"
        android:ems="10"
        android:hint="@string/a_Subject"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Class" />

    <Button
        android:id="@+id/updateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:background="@color/m_BtnColor"
        android:text="@string/u_updateBtn"
        android:textColor="@color/m_TxtColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sub" />

</android.support.constraint.ConstraintLayout>